force-app/main/default/objects/Autentique__c/Autentique__c.object-meta.xml
<CustomObject>
    <label>Autentique</label>
    <nameField>
        <displayFormat>DOC {00000}</displayFormat>
        <label>Nome de Autentique</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Autentique</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>