force-app/main/default/objects/Autentique__c/fields/Cancelado__c.field-meta.xml
<CustomField>
    <fullName>Cancelado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancelado</label>
    <type>Checkbox</type>
</CustomField>