force-app/main/default/objects/Autentique__c/fields/Cotacao__c.field-meta.xml
<CustomField>
    <fullName>Cotacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cotação</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Autentique</relationshipLabel>
    <relationshipName>Autentique</relationshipName>
    <type>Lookup</type>
</CustomField>