force-app/main/default/objects/Autentique__c/fields/Demonstracao__c.field-meta.xml
<CustomField>
    <fullName>Demonstracao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demonstração</label>
    <referenceTo>Demonstracao__c</referenceTo>
    <relationshipLabel>Autentique</relationshipLabel>
    <relationshipName>Autentique</relationshipName>
    <type>Lookup</type>
</CustomField>