force-app/main/default/objects/Autentique__c/fields/Fasee__c.field-meta.xml
<CustomField>
    <fullName>Fasee__c</fullName>
    <formula>IF(Fase__c = &apos;1&apos; &amp;&amp; Cancelado__c = false, &apos;1 - Aguardando assinatura cliente&apos;, IF(Fase__c = &apos;2&apos; &amp;&amp; Cancelado__c = false, &apos;2 - Aguardando aprovação financeira&apos;, IF(Fase__c = &apos;3&apos; &amp;&amp; Cancelado__c = false, &apos;3 - Aguardando aprovação jurídica&apos;, IF(Cancelado__c = true, &apos;5 - Cancelado&apos;, &apos;4 - Assinatura finalizada&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fase</label>
    <type>Text</type>
</CustomField>