force-app/main/default/objects/Autentique__c/fields/Ordem_de_trabalho__c.field-meta.xml
<CustomField>
    <fullName>Ordem_de_trabalho__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ordem de trabalho</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Autentique</relationshipLabel>
    <relationshipName>Autentique</relationshipName>
    <type>Lookup</type>
</CustomField>