force-app/main/default/objects/Autentique__c/fields/Texto__c.field-meta.xml
<CustomField>
    <fullName>Texto__c</fullName>
    <label>Texto</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>